--- a/org.eclipsecon2013.tycho.plugin/pom.xml
+++ b/org.eclipsecon2013.tycho.plugin/pom.xml
@@ -18,9 +18,13 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.eclipsecon2013.tycho</groupId>
+    <artifactId>parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
   <groupId>org.eclipsecon2013.tycho</groupId>
   <artifactId>org.eclipsecon2013.tycho.plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
   <name>Eclipsecon2013 Tycho Plugin (Plugin)</name>
 </project>
