--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
   <properties>
     <tycho-version>0.17.0</tycho-version>
   </properties>
+  <repositories>
+    <repository>
+      <id>indigo</id>
+      <url>http://download.eclipse.org/releases/indigo</url>
+      <layout>p2</layout>
+    </repository>
+  </repositories>
   <modules>
     <module>org.eclipsecon2013.tycho.plugin</module>
   </modules>
