--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <url>http://download.eclipse.org/releases/indigo</url>
       <layout>p2</layout>
     </repository>
+    <repository>
+      <id>swtbot</id>
+      <url>http://download.eclipse.org/technology/swtbot/releases/latest</url>
+      <layout>p2</layout>
+    </repository>
   </repositories>
   <modules>
     <module>org.eclipsecon2013.tycho.plugin</module>
