--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
   </repositories>
   <modules>
     <module>org.eclipsecon2013.tycho.plugin</module>
+    <module>org.eclipsecon2013.tycho.plugin.tests</module>
   </modules>
   <build>
     <plugins>
