--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <module>org.eclipsecon2013.tycho.plugin.tests</module>
     <module>org.eclipsecon2013.tycho.site</module>
     <module>org.eclipsecon2013.tycho.feature</module>
+    <module>org.eclipsecon2013.tycho.product</module>
   </modules>
   <build>
     <plugins>
