--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
   </properties>
   <modules>
     <module>org.eclipsecon2013.tycho.target.e37</module>
+    <module>org.eclipsecon2013.tycho.target.e42</module>
     <module>org.eclipsecon2013.tycho.plugin</module>
     <module>org.eclipsecon2013.tycho.plugin.tests</module>
     <module>org.eclipsecon2013.tycho.site</module>
