Add root features for product

--- a/org.eclipsecon2013.tycho.product/pom.xml
+++ b/org.eclipsecon2013.tycho.product/pom.xml
@@ -27,24 +27,224 @@
   <artifactId>org.eclipsecon2013.tycho.product</artifactId>
   <packaging>eclipse-repository</packaging>
   <name>Eclipsecon2013 Tycho Product (Repository)</name>
+  <properties>
+    <features>org.eclipse.rcp.feature.group,org.eclipse.platform.feature.group</features>
+  </properties>
   <build>
     <plugins>
       <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-p2-director-plugin</artifactId>
-        <version>${tycho-version}</version>
+        <groupId>org.twdata.maven</groupId>
+        <artifactId>mojo-executor-maven-plugin</artifactId>
+        <version>2.0</version>
         <executions>
           <execution>
-            <id>materialize-products</id>
+            <id>materialize</id>
+            <phase>package</phase>
             <goals>
-              <goal>materialize-products</goal>
+              <goal>execute-mojo</goal>
             </goals>
+            <configuration>
+              <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-p2-director-plugin</artifactId>
+                <version>${tycho-version}</version>
+              </plugin>
+              <goal>materialize-products</goal>
+              <configuration/>
+            </configuration>
           </execution>
           <execution>
-            <id>archive-products</id>
+            <id>install-win32-win32-x86_64</id>
+            <phase>package</phase>
             <goals>
-              <goal>archive-products</goal>
+              <goal>execute-mojo</goal>
             </goals>
+            <configuration>
+              <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-eclipserun-plugin</artifactId>
+                <version>${tycho-version}</version>
+              </plugin>
+              <goal>eclipse-run</goal>
+              <configuration>
+                <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -repository "${project.baseUri}/target/repository" -destination "${project.build.directory}/products/org.eclipsecon2013.tycho/win32/win32/x86_64" -installIUs ${features}</appArgLine>
+                <repositories>
+                  <repository>
+                    <id>juno</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/juno</url>
+                  </repository>
+                </repositories>
+                <dependencies>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.transport.ecf</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.natives</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.eclipse</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.artifact.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.director.app</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.core.net</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                </dependencies>
+              </configuration>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-linux-gtk-x86_64</id>
+            <phase>package</phase>
+            <goals>
+              <goal>execute-mojo</goal>
+            </goals>
+            <configuration>
+              <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-eclipserun-plugin</artifactId>
+                <version>${tycho-version}</version>
+              </plugin>
+              <goal>eclipse-run</goal>
+              <configuration>
+                <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -repository "${project.baseUri}/target/repository" -destination "${project.build.directory}/products/org.eclipsecon2013.tycho/linux/gtk/x86_64" -installIUs ${features}</appArgLine>
+                <repositories>
+                  <repository>
+                    <id>juno</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/juno</url>
+                  </repository>
+                </repositories>
+                <dependencies>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.transport.ecf</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.natives</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.eclipse</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.artifact.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.director.app</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.core.net</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                </dependencies>
+              </configuration>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-macosx-cocoa-x86_64</id>
+            <phase>package</phase>
+            <goals>
+              <goal>execute-mojo</goal>
+            </goals>
+            <configuration>
+              <plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-eclipserun-plugin</artifactId>
+                <version>${tycho-version}</version>
+              </plugin>
+              <goal>eclipse-run</goal>
+              <configuration>
+                <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -repository "${project.baseUri}/target/repository" -destination "${project.build.directory}/products/org.eclipsecon2013.tycho/macosx/cocoa/x86_64" -installIUs ${features}</appArgLine>
+                <repositories>
+                  <repository>
+                    <id>juno</id>
+                    <layout>p2</layout>
+                    <url>http://download.eclipse.org/releases/juno</url>
+                  </repository>
+                </repositories>
+                <dependencies>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.transport.ecf</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.natives</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.touchpoint.eclipse</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.artifact.repository</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.p2.director.app</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.equinox.ds</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                  <dependency>
+                    <artifactId>org.eclipse.core.net</artifactId>
+                    <type>eclipse-plugin</type>
+                  </dependency>
+                </dependencies>
+              </configuration>
+            </configuration>
+          </execution>
+          <execution>
+            <id>archive</id>
+            <phase>package</phase>
+            <goals>
+              <goal>execute-mojo</goal>
+            </goals>
+            <configuration>
+              <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-p2-director-plugin</artifactId>
+                <version>${tycho-version}</version>
+              </plugin>
+              <goal>archive-products</goal>
+              <configuration/>
+            </configuration>
           </execution>
         </executions>
       </plugin>
